<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.bernoux.etienne.mycalculatorfrag.com.bernoux.etienne.generalsensor.Calculate">

    <TextView
        android:id="@+id/numberEntry"
        android:layout_width="match_parent"
        android:ems="0"
        android:layout_height="105dp"
        android:text="0"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="30sp" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5"
        android:useDefaultMargins="false">

        <Button
            android:id="@+id/buttonReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:text="@string/back"
            android:background="@android:drawable/btn_default"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:text="@string/cancel"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_row="4"
            android:layout_rowSpan="1"
            android:text="@string/dot"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:text="@string/nine"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:text="@string/height"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:text="@string/seven"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:text="@string/six"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:text="@string/five"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:text="@string/four"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_row="3"
            android:layout_rowSpan="1"
            android:text="@string/three"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_row="3"
            android:layout_rowSpan="1"
            android:text="@string/two"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:onClick="onClick"
            android:text="@string/times"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="3"
            android:layout_rowSpan="1"
            android:text="@string/one"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:text="@string/plus"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:text="@string/minus"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonObelus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:text="@string/obelus"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="4"
            android:layout_rowSpan="1"
            android:text="@string/zero"
            android:layout_columnWeight="2"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_row="3"
            android:layout_rowSpan="2"
            android:onClick="onClick"
            android:text="@string/equal"
            android:layout_rowWeight="2"
            android:background="@android:drawable/btn_default_small"
            android:fontFamily="monospace"
            android:minHeight="69dp"
            android:minWidth="82dp"
            android:textSize="30sp" />

    </GridLayout>

</LinearLayout>
