<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_browse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bernoux.etienne.mycalculatorfrag.Browse">

    <TextView
        android:text="@string/resultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/result"
        android:layout_marginTop="34dp" />

    <TextView
        android:text="@string/resultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/result"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url"
        android:ems="10"
        android:layout_below="@+id/result"
        android:layout_alignParentStart="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="41dp"
        android:id="@+id/url" />

    <Button
        android:text="@string/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/url"
        android:layout_alignStart="@+id/url"
        android:layout_marginTop="25dp"
        android:id="@+id/buttonSubmit" />

    <TextView
        android:text="Enter your URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:layout_alignStart="@+id/url"
        android:layout_marginTop="14dp"
        android:id="@+id/textView3"
        android:textAppearance="@android:style/TextAppearance.Material.Title" />


    <Button
        android:text="@string/buttonFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSubmit"
        android:layout_alignStart="@+id/url"
        android:layout_marginTop="25dp"
        android:id="@+id/buttonFragment" />

</RelativeLayout>
